--- a/templates/view/view_tmp.jade
+++ b/templates/view/view_tmp.jade
@@ -5,7 +5,7 @@ html
 		title <%= name%>工具
 		link(rel="stylesheet", href="#{isDev ? 'http://localhost:9000/assets' : '/static/dist'}/#{pageCss}")
 	body
-		h1 tools demo
-		app
+		div#page
+		script(src="http://static.yidianzixun.com/modules/common/jquery-2.1.1.min.js")	
 		script(src="#{isDev ? 'http://localhost:9000/assets' : '/static/dist'}/#{commonJs}")
 		script(src="#{isDev ? 'http://localhost:9000/assets' : '/static/dist'}/#{pageJs}")
